tests/integration/errors/test_namespace_undefined_symbol.sn
// Test: Accessing undefined symbol in a valid namespace
// The namespace 'math' exists but 'nonexistent' is not defined in it
import "../lib/math_basic" as math

fn main(): void =>
    var x: int = math.nonexistent(1, 2)
    print($"{x}\n")
